TASKS-000 Добавил настройки БД, основные классы для работы с CRUD методами и конфиг-сервер
