# user-service/src/main/java/vagapov/user_service/entity/SexEntity.java
@@ -1,0 +1,15 @@
+package vagapov.user_service.entity;
+
+/**
+ * Сущность пола
+ */
+public enum SexEntity {
+    /**
+     * Мужской пол
+     */
+    M,
+    /**
+     * Женский пол
+     */
+    F
+}
