# user-service/src/main/java/vagapov/user_service/validation/ValidationService.java
@@ -1,0 +1,9 @@
+package vagapov.user_service.validation;
+
+import java.util.UUID;
+
+public interface ValidationService {
+    void validRequest(Object value);
+
+    void validVersion(Integer version, UUID userGuid);
+}
